:seedling: wip... add job trigger api
